fix(cors): update api base url to /api proxy and allow all origin patterns in SecurityConfig